tdf#104423 Restore saving of Duplicate dlg parameters

Saving of parameters in Duplicate dlg was removed by
ce82146a6be87b239a0bde0b59fddf8865290b99

Change-Id: Id7aaf0734132e3d2a5bd4f11f3a5a7abeaf64911
Reviewed-on: https://gerrit.libreoffice.org/36755
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>